# openfoodfacts-ai

.github/: labeler.yml
genai-features/notebooks/: explore_recent_changes.ipynb
language_identification/: pyproject.toml
language_identification/scripts/: 01_extract_data.py  02_select_short_texts_with_known_ingredients.py  03_calculate_metrics.py  10_words_metrics.csv  README.md  fasttext_confusion_matrix.csv  inference.py  lingua_confusion_matrix.csv  manually_checked_data.csv
ml_utils/ml_utils_cli/: README.md  main.py  requirements.txt
ml_utils/ml_utils_cli/cli/: export.py
ml_utils/ml_utils_cli/cli/apps/: datasets.py  projects.py
