[tool.poetry]
name = "language_identification"
version = "0.1.0"
description = ""
authors = ["Yulia Zhilyaeva"]
readme = "./scripts/README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
tqdm = "^4.67.0"
datasets = "^3.1.0"
joblib = "^1.4.2"
openfoodfacts = "^2.1.0"
polyglot = "^16.7.4"
numpy = "^2.1.3"
langcodes = "^3.4.1"
scikit-learn = "^1.5.2"
fasttext = "^0.9.3"
lingua-language-detector = "^2.0.2"
huggingface-hub = "^0.26.2"
pyicu = "^2.14"
pycld2 = "^0.41"
morfessor = "^2.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
